--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <h1 class="display-4">Sorry, Leo ...</h1>
   <p class="lead"> Die Online-Bestellung ist aktuell nicht möglich!</p>
   <hr class="my-4">
-  <p>Um diesen Dienst in Anspruch zu nehmen, senden Sie bei akutem Hunger ein 🍔-Emoji an ihren Service-Partner.</p>
+  <p>Um diesen Dienst in Anspruch zu nehmen, senden Sie bei akutem Hunger ein 🍔-Emoji an Ihren Service-Partner.</p>
   <p class="lead">
-
+	<a class="btn btn-primary btn-lg" href="#" role="button">Menü des Tages</a>
   </p>
 </div>
 </body>
